# SmartHome

./: .dockerignore  .env  .env.example  .env.server.prod  .gitignore  .gitmodules  docker-compose-auth-dev.yml  docker-compose-dev.yml  docker-compose-traefik-old-old.yml  docker-compose-traefik-old.yml  docker-compose-traefik.yml  docker-compose.yml  install_build_client.sh  readme.md  sert-craete.sh  tortoise_conf.py  traefik.yml
AuthService/SmartHomeAuth/: .dockerignore  .gitignore  Dockerfile  command.sh  pyproject.toml
AuthService/SmartHomeAuth/alembic/: env.py
AuthService/SmartHomeAuth/app/: __init__.py
EmailService/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
EmailService/app/configuration/: server.py  settings.py  settings_prod.py
ModuleManeger/server/: .gitignore  Dockerfile  modules_cache.json  pyproject.toml
PagesServices/: Dockerfile  add_shared_lib_in_poetry.sh  command.sh  pyproject.toml  remove_shared_lib_in_poetry.sh
PagesServices/alembic/: env.py
PagesServices/alembic/versions/: 3c1979905e69_init.py  a57b40d4aec3_dashboard.py
PagesServices/app/: __init__.py
PagesServices/app/configuration/: server.py  settings.py  settings_prod.py
PagesServices/app/moduls/: __init__.py
PagesServices/app/pkg/: __init__.py
PagesServices/logs/: pagesLogs.log.2025-03-27
ScriptServices/: .gitignore  Dockerfile  command.sh  copy_shared_lib.sh  pyproject.toml  pytest.ini
ScriptServices/alembic/versions/: 49cf0f693203_init.py
ScriptServices/app/: __init__.py
ScriptServices/app/configuration/: server.py  settings.py  settings_prod.py
ScriptServices/app/internal/: f1.py
ScriptServices/app/pkg/: __init__.py
SmartHome/: .dockerignore  .gitignore  Dockerfile  alembic.ini  command.sh  init_models.py  initadmin.py  initapp.py  mail.txt  main.py  models.py  modulesconfig.py  pyproject.toml  reg2.txt  req.txt  requirements.txt  settings.py  settings_prod.py
SmartHome/DeviceControl/: SmartHomeDevice.py  apps.py  index.py
SmartHome/DeviceControl/miioDevice/: definition.py
SmartHome/DeviceControl/system/: variable.py
SmartHome/SmartHome/: asgi.py  celery.py  dbormar.py  dbtest.py  exceptions.py  models.py  prod_settings.py  settings.py  settings_prod.py  urls.py  websocket.py  wsgi.py  yasg.py
SmartHome/SmartHome/api/: auth.py  device.py  deviceGroup.py  device_group.py  file.py  first_start.py  homePage.py  menu.py  moduls.py  pages.py  room.py  script.py  server.py  style.py  user.py
SmartHome/SmartHome/depends/: auth.py
SmartHome/SmartHome/logic/: auth.py  call_functions.py  email.py  gallery.py  homePage.py  menu.py  style.py  user.py  weather.py
SmartHome/SmartHome/schemas/: auth.py  base.py  device.py  group.py  homePage.py  image.py  menu.py  room.py  script.py  server.py  style.py  user.py
SmartHome/SmartHome/websocket/: manager.py
SmartHome/SmartHome_old/api/: device.py  home_page.py  menu.py  pages.py  room.py
SmartHome/SmartHome_old/logic/: gallery.py  homePage.py  menu.py
SmartHome/SmartHome_old/schemas/: base.py  homePage.py
SmartHome/alembic/: env.py
SmartHome/alembic/versions/: 04364195987c_added_session_table.py  (+65 more)
SmartHome/api/: auth.py  device.py  server.py  style.py  user.py
SmartHome/app/: __init__.py  dbormar.py  settings.py  websocket.py
SmartHome/auth_service/: auth_service.py  castom_requests.py  config.py  logout.py
SmartHome/authtorization/: api.py  api_style.py  api_user.py  auth_depends.py  auth_service.py  exceptions.py  initAdmin.py  init_admin.py  logic.py  models.py  old_token.py  schema.py  user.py
SmartHome/castom_moduls/: __init__.py  models_schema.py
SmartHome/client/: urls.py  views.py
SmartHome/config/: configInit.py  config_init.py  config_set.py  configget.py  configset.py  devTypes.yml  devices.yml  gunicorn.conf.py  modulesconfig.py  server-config.yml  smartHome.conf
SmartHome/exceptions/: exceptions.py
SmartHome/fastAPI/: main.py
SmartHome/files/: admin.py  devTypes.yml  devices.yml  forms.py  menu.yml  models.py  server-config.yml  urls.py  views.py
SmartHome/logic/: auth.py  call_functions.py  email.py  style.py  user.py  weather.py
SmartHome/moduls_src/: baseClassControll.py  baseClassModule.py  managers.py  models_schema.py  moduls.py  pages.py  services.py
SmartHome/schemas/: auth.py  device.py  server.py  user.py
SmartHome/send_email/: email.py
SmartHome/smartHomeApi/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
SmartHome/smarthome/: apps.py  models.py  urls.py  views.py
shared_lib/config_lib/: pyproject.toml
(+2630 files in other folders)
