[tool.poetry]
name = "smarthome"
version = "0.1.0"
description = ""
authors = ["Alex-Evo-2266 <ghbdtn2266@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
ormar = {extras = ["mysql"], version = "^0.20.2"}
alembic = "^1.14.1"
pyyaml = "^6.0.2"
uvicorn = "^0.34.0"
paho-mqtt = "^2.1.0"
yeelight = "^0.7.16"
websockets = "^14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
